Add a gif & gitignore

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
       <li>Hamster’s incisor teeth never stop growing.</li>
       <li>Hamsters can have up to 24 babies at a time.</li>
     </ol>
+    <img src="hamster.gif"/>
     <hr>
     <p>
       <a href="https://www.aspca.org/sites/default/files/upload/images/hamster_edu.pdf">Hamster care</a>
